fixed laggy scrolling on mobile devices

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -166,24 +166,14 @@ body {
   -webkit-text-size-adjust:none;
 }
 
-.row {left: 0; right: 0; overflow: hidden; position: absolute;}
-.scroll-y {overflow-y: auto;}
-
 /* container elements
 * =================================================================================================================== */
 #container {
-  position:absolute;
-  z-index:1;
-  top: $header_height;
-  bottom:0;
-  left:0;
   width:100%;
-  overflow:auto;
 }
 
 #header {
-  position: absolute;
-  //display: none;
+  position: fixed;
   height: $header_height;
   top:0;
   left: 0;
@@ -211,12 +201,8 @@ body {
 }
 
 #main {
-  position:absolute;
-  z-index:1;
-/*  -webkit-touch-callout:none;*/
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
   width:100%;
-  padding:0;
+  padding-top: $header_height;
 }
 
 /* list elements
@@ -238,8 +224,6 @@ body {
 }
 
 .primary-list {
-  //-webkit-overflow-scrolling: touch;
-  //overflow: scroll;
   list-style-type: none;
   width: 90%;
   padding: 0;
@@ -504,7 +488,6 @@ ul li span {
     color: #000000;
     font-style: italic;
     padding-bottom: 5px;
-    //border: 1px solid #0d0e0d;
   }
   .link-button {
     position: absolute;
